--- a/articles/data_visualization/plot_match_theme.qmd
+++ b/articles/data_visualization/plot_match_theme.qmd
@@ -1,6 +1,6 @@
 ---
 title: "How to make your plot match with the global app theme?"
-output-location: column
+code-fold: true
 ---
 
 Plots generated with the [ggplot2](https://ggplot2.tidyverse.org/) library can be customized to improve data visualization & user experience.
@@ -40,6 +40,7 @@ But keeping the color arguments aligned across the app can be tedious as you nee
 Whenever I make a new plot, I always encapsulate the plot layer building into a dedicated function that will be called and return a [ggplot2](https://ggplot2.tidyverse.org/) object (most time it will feed an output with [renderPlot()](https://shiny.posit.co/r/reference/shiny/latest/renderplot.html)). It makes it much easier to maintain the plot code as you can use it directly from the console for fine tuning, but also to reuse that code for another project.
 
 ```{r}
+#| echo: false
 
 # -- define plot function
 basic_plot <- function(data){
@@ -102,6 +103,7 @@ p
 With this, colors can be tuned easily across the app and plot functions can be reused in a different project without much update since you will just update the color variable at the app level.
 
 ```{r}
+#| echo: true
 
 # -- update color variable
 colors <- c("primary" = "#5d25be", "secondary" = "#ffff9b")
@@ -121,7 +123,6 @@ To do so, you need - *from the server side* - to get the current theme that was 
 And [bslib](https://rstudio.github.io/bslib/) has a handy function for that:
 
 ```{r}
-#| code-fold: true
 #| eval: false
 
 # -- Dependencies
@@ -162,7 +163,6 @@ If you have a look into that theme object, you will soon understand that diving 
 Once again, [bslib](https://rstudio.github.io/bslib/) has made it easy for you and provides a handy [bs_get_variables()](https://rstudio.github.io/bslib/reference/bs_get_variables.html) function to get the colors out of that theme bundle without effort:
 
 ```{r}
-#| code-fold: true
 #| eval: false
 
 # -- Define ui
@@ -210,7 +210,6 @@ shinyApp(ui, server)
 Now you just need to pass this variable to the plot function we customized in the first step and get your plot match with the global app theme.
 
 ```{r}
-#| code-fold: true
 #| eval: false
 
 # -- Define ui
