--- a/index.qmd
+++ b/index.qmd
@@ -1,20 +1,19 @@
 ---
-title: "Home"
+title: "Welcome"
 ---
 
 Welcome to this Wiki.
 
 As most of us do, I tend to keep tons of notes about how to do this or that in a not so organized folder.
 
-The goal of this wiki is to share short how-to articles as well as longer tutorials in an organized environment providing automated features to navigate easily.
+The goal of this wiki is to share short how-to articles as well as longer tutorials in an organized environment providing automated features to navigate easily.\
+You can either navigate the folder structure in the left sidebar or use the search in the navbar.
 
--   Folder structure
-
--   Search across articles
-
-Longer articles will be linked to dedicated repositories inside my GitHub
+Longer articles will be linked to dedicated repositories inside my GitHub:
 
 -   GitHub: <https://github.com/thekangaroofactory>
+
+You can also have a look at R / Python templates:
 
 -   Specific [R](https://github.com/thekangaroofactory?tab=repositories&q=template-r&type=&language=&sort=) templates
 
